# Learning-Quantitative-Trading

./: .gitattributes  .gitignore  DATA_SOURCES.md  LICENSE-CODE  LICENSE-DOCS.md  README.md
.github/workflows/: ci.yml
docs/: 00-完整教程索引与学习路线.md  01-金融体系与量化交易基础.md  02-金融资产与中国A股市场.md  03-A股交易规则订单成交与成本.md  04-金融数学概率与统计基础.md  05-Python量化研究零基础.md  06-Pandas可视化与SQL数据管理.md  07-A股数据源交易日历与时点股票池.md  08-行情清洗复权与研究偏差防控.md  09-基本面宏观风格与技术指标分析.md  10-研究假设信号仓位与订单.md  11-手写向量化回测.md  12-事件驱动回测与A股交易约束.md  13-绩效评估收益归因与过拟合防控.md  14-因子研究组合构建与风险管理.md  15-趋势均值回归与多因子实战.md  16-机器学习量化入门.md  17-Python量化平台架构数据库与API.md  18-Vue前端模拟盘测试与综合验收.md  README.md
quant-lab/: .gitignore  README.md  pyproject.toml
quant-lab/data/: bars.csv  corporate_actions.csv  fundamentals.csv  instruments.csv
quant-lab/frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
quant-lab/frontend/src/: App.vue  style.css
quant-lab/src/quant_lab/: __init__.py
quant-lab/src/quant_lab/api/: app.py
quant-lab/src/quant_lab/backtest/: engine.py  metrics.py
quant-lab/src/quant_lab/core/: models.py  strategy.py
quant-lab/src/quant_lab/data/: provider.py  storage.py
quant-lab/src/quant_lab/paper/: broker.py
quant-lab/tests/: test_api.py  test_broker.py  test_metrics.py  test_provider_and_strategy.py
scripts/: validate_docs.py
