[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-lab"
version = "0.1.0"
description = "面向教学的中国 A 股研究、回测和模拟盘平台"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "pydantic>=2.9,<3",
  "pandas>=2.2,<3",
  "numpy>=2.0,<3",
  "sqlalchemy>=2.0,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "httpx>=0.27,<1"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
